--- a/dev_env/create_serving_endpoint.ipynb
+++ b/dev_env/create_serving_endpoint.ipynb
@@ -21,7 +21,9 @@
     "from databricks.sdk import WorkspaceClient\n",
     "from databricks.sdk.service.serving import (\n",
     "    EndpointCoreConfigInput,\n",
-    "    ServedEntityInput\n",
+    "    ServedEntityInput,\n",
+    "    TrafficConfig,  # ✅ ADDED\n",
+    "    Route  # ✅ ADDED\n",
     ")\n",
     "import mlflow\n",
     "from mlflow.tracking import MlflowClient\n",
@@ -190,9 +192,10 @@
     "        )\n",
     "\n",
     "# --------------------------------------------------\n",
-    "# 7️⃣ BUILD SERVED ENTITIES (TRAFFIC SPLIT)\n",
+    "# 7️⃣ BUILD SERVED ENTITIES (WITHOUT traffic_percentage)\n",
     "# --------------------------------------------------\n",
     "served_entities = []\n",
+    "traffic_config_routes = []\n",
     "\n",
     "print(\"\\n📊 Building traffic distribution...\")\n",
     "\n",
@@ -201,29 +204,27 @@
     "    if not cfg.get(\"active\", False):\n",
     "        continue\n",
     "\n",
-    "    # ✅ FIXED: Use correct parameter structure based on SDK version\n",
-    "    try:\n",
-    "        # Try new SDK format first (recommended)\n",
-    "        served_entity = ServedEntityInput(\n",
-    "            entity_name=cfg[\"model_name\"],\n",
-    "            entity_version=str(cfg[\"version\"]),\n",
-    "            workload_size=pipeline_cfg[\"serving\"][\"workload_size\"],\n",
-    "            scale_to_zero_enabled=pipeline_cfg[\"serving\"][\"scale_to_zero_enabled\"]\n",
-    "        )\n",
-    "        served_entities.append(served_entity)\n",
-    "        print(f\"   • {cfg['model_name']} v{cfg['version']} → {cfg['traffic']}% (SDK v0.18+)\")\n",
-    "        \n",
-    "    except TypeError:\n",
-    "        # Fallback to old SDK format\n",
-    "        served_entity = ServedEntityInput(\n",
-    "            entity_name=cfg[\"model_name\"],\n",
-    "            entity_version=str(cfg[\"version\"]),\n",
-    "            workload_size=pipeline_cfg[\"serving\"][\"workload_size\"],\n",
-    "            scale_to_zero_enabled=pipeline_cfg[\"serving\"][\"scale_to_zero_enabled\"],\n",
-    "            traffic_percentage=int(cfg[\"traffic\"])\n",
-    "        )\n",
-    "        served_entities.append(served_entity)\n",
-    "        print(f\"   • {cfg['model_name']} v{cfg['version']} → {cfg['traffic']}% (SDK < v0.18)\")\n",
+    "    # ✅ Generate unique name for this served entity\n",
+    "    served_entity_name = f\"{model_type}-v{cfg['version']}\"\n",
+    "    \n",
+    "    # ✅ Create ServedEntityInput WITHOUT traffic_percentage\n",
+    "    served_entity = ServedEntityInput(\n",
+    "        name=served_entity_name,  # ✅ CRITICAL: Must have unique name\n",
+    "        entity_name=cfg[\"model_name\"],\n",
+    "        entity_version=str(cfg[\"version\"]),\n",
+    "        workload_size=pipeline_cfg[\"serving\"][\"workload_size\"],\n",
+    "        scale_to_zero_enabled=pipeline_cfg[\"serving\"][\"scale_to_zero_enabled\"]\n",
+    "    )\n",
+    "    served_entities.append(served_entity)\n",
+    "    \n",
+    "    # ✅ Create Route for TrafficConfig\n",
+    "    route = Route(\n",
+    "        served_model_name=served_entity_name,\n",
+    "        traffic_percentage=int(cfg[\"traffic\"])\n",
+    "    )\n",
+    "    traffic_config_routes.append(route)\n",
+    "    \n",
+    "    print(f\"   • {cfg['model_name']} v{cfg['version']} → {cfg['traffic']}%\")\n",
     "\n",
     "if not served_entities:\n",
     "    raise ValueError(\"❌ No active models found in MODEL_SERVING_CONFIG\")\n",
@@ -235,6 +236,9 @@
     "        f\"❌ Traffic percentages must add up to 100%\\n\"\n",
     "        f\"   Current total: {total_traffic}%\"\n",
     "    )\n",
+    "\n",
+    "# ✅ Create TrafficConfig\n",
+    "traffic_config = TrafficConfig(routes=traffic_config_routes)\n",
     "\n",
     "# --------------------------------------------------\n",
     "# 8️⃣ ENDPOINT NAME (SINGLE PROD ENDPOINT)\n",
@@ -259,14 +263,16 @@
     "        print(\"🔄 Updating existing endpoint...\")\n",
     "        w.serving_endpoints.update_config(\n",
     "            name=ENDPOINT_NAME,\n",
-    "            served_entities=served_entities\n",
+    "            served_entities=served_entities,\n",
+    "            traffic_config=traffic_config  # ✅ ADDED\n",
     "        )\n",
     "    else:\n",
     "        print(\"➕ Creating new endpoint...\")\n",
     "        w.serving_endpoints.create(\n",
     "            name=ENDPOINT_NAME,\n",
     "            config=EndpointCoreConfigInput(\n",
-    "                served_entities=served_entities\n",
+    "                served_entities=served_entities,\n",
+    "                traffic_config=traffic_config  # ✅ ADDED\n",
     "            )\n",
     "        )\n",
     "except Exception as e:\n",
@@ -301,8 +307,8 @@
     "print(\"=\"*80)\n",
     "print(f\"📍 Endpoint Name: {ENDPOINT_NAME}\")\n",
     "print(f\"\\n📊 Traffic Distribution:\")\n",
-    "for s in served_entities:\n",
-    "    print(f\"   • {s.entity_name} v{s.entity_version} → {s.traffic_percentage}%\")\n",
+    "for route in traffic_config_routes:\n",
+    "    print(f\"   • {route.served_model_name} → {route.traffic_percentage}%\")\n",
     "print(\"=\"*80)"
    ]
   }
