fix issue in register script

--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -436,7 +436,12 @@
     "    spark_df = spark.createDataFrame(df, schema=get_table_schema())\n",
     "\n",
     "    try:\n",
-    "        spark_df.write.format(\"delta\").mode(\"append\").saveAsTable(config.REGISTRATION_LOG_TABLE)\n",
+    "        # ✅ CRITICAL FIX: Add mergeSchema option\n",
+    "        spark_df.write \\\n",
+    "            .format(\"delta\") \\\n",
+    "            .mode(\"append\") \\\n",
+    "            .option(\"mergeSchema\", \"true\") \\\n",
+    "            .saveAsTable(config.REGISTRATION_LOG_TABLE)\n",
     "        print(f\"      📄 Logged to: {config.REGISTRATION_LOG_TABLE}\")\n",
     "    except Exception as e:\n",
     "        print(f\"      ⚠️  Failed to log: {e}\")\n",
