fix the code in serving script

--- a/dev_env/create_serving_endpoint_env_var.ipynb
+++ b/dev_env/create_serving_endpoint_env_var.ipynb
@@ -278,9 +278,11 @@
     "        print(\"🔄 Updating existing endpoint...\")\n",
     "        w.serving_endpoints.update_config(\n",
     "            name=ENDPOINT_NAME,\n",
-    "            served_entities=served_entities,\n",
-    "            traffic_config=traffic_config,  # ✅ ADDED\n",
-    "            environment_vars=endpoint_env_vars  # ✅ ADDED\n",
+    "            config=EndpointCoreConfigInput(\n",
+    "                served_entities=served_entities,\n",
+    "                traffic_config=traffic_config,  # ✅ ADDED\n",
+    "                environment_vars=endpoint_env_vars  # ✅ ADDED\n",
+    "            )\n",
     "        )\n",
     "    else:\n",
     "        print(\"➕ Creating new endpoint...\")\n",
