using rest api config in serving script

--- a/dev_env/create_serving_endpoint_env_var.ipynb
+++ b/dev_env/create_serving_endpoint_env_var.ipynb
@@ -264,6 +264,31 @@
     "    print(f\"   • {k} = {v}\")\n",
     "\n",
     "# --------------------------------------------------\n",
+    "# ✅ 8️⃣.2️⃣ REST API PATCH FOR ENV VARS (ADDED)\n",
+    "# --------------------------------------------------\n",
+    "def patch_endpoint_env_vars(endpoint_name: str, env_vars: dict):\n",
+    "    \"\"\"\n",
+    "    Patch endpoint config using REST API to set environment variables.\n",
+    "    This works even when SDK doesn't support environment_vars parameter.\n",
+    "    \"\"\"\n",
+    "    import requests\n",
+    "\n",
+    "    ctx = dbutils.notebook.entry_point.getDbutils().notebook().getContext()\n",
+    "    host = ctx.apiUrl().get()\n",
+    "    token = ctx.apiToken().get()\n",
+    "\n",
+    "    url = f\"{host}/api/2.0/serving-endpoints/{endpoint_name}/config\"\n",
+    "    headers = {\"Authorization\": f\"Bearer {token}\"}\n",
+    "\n",
+    "    payload = {\"environment_vars\": env_vars}\n",
+    "\n",
+    "    r = requests.patch(url, headers=headers, json=payload)\n",
+    "    if 200 <= r.status_code < 300:\n",
+    "        print(\"✅ Environment variables updated via REST API\")\n",
+    "    else:\n",
+    "        raise Exception(f\"❌ REST API ENV update failed: {r.status_code} - {r.text}\")\n",
+    "\n",
+    "# --------------------------------------------------\n",
     "# 9️⃣ CREATE OR UPDATE ENDPOINT\n",
     "# --------------------------------------------------\n",
     "def endpoint_exists(name):\n",
@@ -280,8 +305,7 @@
     "            name=ENDPOINT_NAME,\n",
     "            config=EndpointCoreConfigInput(\n",
     "                served_entities=served_entities,\n",
-    "                traffic_config=traffic_config,  # ✅ ADDED\n",
-    "                environment_vars=endpoint_env_vars  # ✅ ADDED\n",
+    "                traffic_config=traffic_config  # ✅ ADDED\n",
     "            )\n",
     "        )\n",
     "    else:\n",
@@ -290,10 +314,13 @@
     "            name=ENDPOINT_NAME,\n",
     "            config=EndpointCoreConfigInput(\n",
     "                served_entities=served_entities,\n",
-    "                traffic_config=traffic_config,  # ✅ ADDED\n",
-    "                environment_vars=endpoint_env_vars  # ✅ ADDED\n",
+    "                traffic_config=traffic_config  # ✅ ADDED\n",
     "            )\n",
     "        )\n",
+    "\n",
+    "    # ✅ PATCH ENV VARS AFTER CREATE/UPDATE\n",
+    "    patch_endpoint_env_vars(ENDPOINT_NAME, endpoint_env_vars)\n",
+    "\n",
     "except Exception as e:\n",
     "    print(\"❌ Failed to deploy serving endpoint\")\n",
     "    traceback.print_exc()\n",
