--- a/Model_part_2/train.ipynb
+++ b/Model_part_2/train.ipynb
@@ -36,7 +36,7 @@
     "from pyspark.sql import SparkSession\n",
     "\n",
     "# ✅ Import evaluation logging functions\n",
-    "from evaluation import create_eval_table_if_not_exists, log_run_to_table\n",
+    "from model_evaluation import create_eval_table_if_not_exists, log_run_to_table\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
