--- a/Model_part_2/train.ipynb
+++ b/Model_part_2/train.ipynb
@@ -11,18 +11,16 @@
    },
    "outputs": [],
    "source": [
-    "### TRAINING_script (FIXED - Hyperparameter Grid from YAML)\n",
+    "### TRAINING_script (ZIPPED Hyperparameter Runs from YAML + Evaluation Logging in same file)\n",
     "\n",
     "import mlflow\n",
     "import time\n",
     "import yaml\n",
-    "import sys\n",
-    "import os\n",
+    "import json\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import warnings\n",
     "from datetime import datetime\n",
-    "from itertools import product\n",
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -34,44 +32,116 @@
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from mlflow.models.signature import infer_signature\n",
     "from pyspark.sql import SparkSession\n",
-    "\n",
-    "# ✅ Import evaluation logging functions\n",
-    "%run ./model_evaluation\n",
+    "from pyspark.sql.functions import col\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "print(\"=\" * 80)\n",
-    "print(\"🚀 CREDIT RISK TRAINING - MULTI MODEL MODE\")\n",
+    "print(\"🚀 CREDIT RISK TRAINING - MULTI MODEL MODE (ZIPPED PARAMS + EVAL LOGGING)\")\n",
     "print(\"=\" * 80)\n",
     "\n",
-    "# 🔥 LOAD CONFIG FILES\n",
-    "\n",
+    "# ---------------------- LOAD CONFIG FILES ----------------------\n",
     "with open(\"pipeline_config.yml\", \"r\") as f:\n",
     "    pipeline_cfg = yaml.safe_load(f)\n",
     "\n",
     "with open(\"experiments_config.yml\", \"r\") as f:\n",
     "    experiments_cfg = yaml.safe_load(f)\n",
     "\n",
-    "# 🔥 GET MODELS TO TRAIN (No Git Variables / Widgets)\n",
+    "# ---------------------- INIT SPARK ----------------------\n",
+    "spark = SparkSession.builder.appName(\"CreditRiskTraining\").getOrCreate()\n",
     "\n",
+    "# ---------------------- EVALUATION CONFIG (FROM pipeline_config.yml) ----------------------\n",
+    "EVAL_TABLE = pipeline_cfg[\"tables\"][\"evaluation_log\"]\n",
+    "TRACKED_METRICS = pipeline_cfg[\"metrics\"][\"classification\"][\"tracked_metrics\"]\n",
+    "\n",
+    "DUPLICATE_CFG = pipeline_cfg.get(\"tables\", {}).get(\"duplicate_handling\", {})\n",
+    "DUPLICATE_ENABLED = DUPLICATE_CFG.get(\"enabled\", True)\n",
+    "\n",
+    "print(f\"✅ Evaluation Log Table: {EVAL_TABLE}\")\n",
+    "print(f\"✅ Tracked Metrics: {TRACKED_METRICS}\")\n",
+    "print(f\"✅ Duplicate Handling Enabled: {DUPLICATE_ENABLED}\")\n",
+    "\n",
+    "# ---------------------- EVALUATION TABLE FUNCTIONS ----------------------\n",
+    "def create_eval_table_if_not_exists():\n",
+    "    spark.sql(f\"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS {EVAL_TABLE} (\n",
+    "        model_name STRING,\n",
+    "        model_type STRING,\n",
+    "        run_id STRING,\n",
+    "        experiment_name STRING,\n",
+    "        created_timestamp TIMESTAMP,\n",
+    "        hyperparameters STRING,\n",
+    "        metrics STRING\n",
+    "    )\n",
+    "    USING DELTA\n",
+    "    \"\"\")\n",
+    "    print(f\"✅ Evaluation table ready: {EVAL_TABLE}\")\n",
+    "\n",
+    "\n",
+    "def is_duplicate(model_type: str, experiment_name: str, hyper_json: str) -> bool:\n",
+    "    \"\"\"\n",
+    "    Duplicate means:\n",
+    "    same model_type + experiment_name + hyperparameters already exists\n",
+    "    \"\"\"\n",
+    "    if not DUPLICATE_ENABLED:\n",
+    "        return False\n",
+    "\n",
+    "    try:\n",
+    "        df = spark.read.table(EVAL_TABLE).filter(\n",
+    "            (col(\"model_type\") == model_type) &\n",
+    "            (col(\"experiment_name\") == experiment_name) &\n",
+    "            (col(\"hyperparameters\") == hyper_json)\n",
+    "        )\n",
+    "        return df.limit(1).count() > 0\n",
+    "    except Exception as e:\n",
+    "        print(f\"⚠️ Duplicate check skipped (table read error): {e}\")\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "def log_run_to_table(model_name, model_type, run_id, experiment_name, hyperparams, metrics):\n",
+    "    \"\"\"\n",
+    "    Stores:\n",
+    "    - hyperparameters as JSON string\n",
+    "    - metrics as JSON string (only tracked metrics)\n",
+    "    - avoids duplicates\n",
+    "    \"\"\"\n",
+    "\n",
+    "    filtered_metrics = {k: metrics.get(k, None) for k in TRACKED_METRICS}\n",
+    "\n",
+    "    hyper_json = json.dumps(hyperparams, sort_keys=True)\n",
+    "    metrics_json = json.dumps(filtered_metrics, sort_keys=True)\n",
+    "\n",
+    "    if is_duplicate(model_type, experiment_name, hyper_json):\n",
+    "        print(f\"⚠️ Duplicate row detected. Skipping insert for run_id={run_id}\")\n",
+    "        return\n",
+    "\n",
+    "    row = [{\n",
+    "        \"model_name\": model_name,\n",
+    "        \"model_type\": model_type,\n",
+    "        \"run_id\": run_id,\n",
+    "        \"experiment_name\": experiment_name,\n",
+    "        \"created_timestamp\": datetime.utcnow(),\n",
+    "        \"hyperparameters\": hyper_json,\n",
+    "        \"metrics\": metrics_json\n",
+    "    }]\n",
+    "\n",
+    "    df = spark.createDataFrame(row)\n",
+    "    df.write.format(\"delta\").mode(\"append\").saveAsTable(EVAL_TABLE)\n",
+    "\n",
+    "    print(f\"✅ Logged evaluation row for run_id={run_id}\")\n",
+    "\n",
+    "# ---------------------- GET MODELS TO TRAIN ----------------------\n",
     "def get_models_to_train():\n",
     "    available_models = list(experiments_cfg.get(\"models\", {}).keys())\n",
-    "\n",
     "    if not available_models:\n",
     "        raise ValueError(\"❌ No models defined in experiments_config.yml\")\n",
     "\n",
     "    print(f\"✅ Training ALL models: {available_models}\")\n",
     "    return available_models\n",
     "\n",
-    "try:\n",
-    "    MODELS_TO_TRAIN = get_models_to_train()\n",
-    "    print(f\"\\n📋 Models to train: {MODELS_TO_TRAIN}\\n\")\n",
-    "except ValueError as e:\n",
-    "    print(str(e))\n",
-    "    dbutils.notebook.exit(\"FAILED: Invalid MODELS_TO_TRAIN configuration\")\n",
+    "MODELS_TO_TRAIN = get_models_to_train()\n",
     "\n",
-    "# 🔥 PIPELINE SETTINGS\n",
-    "\n",
+    "# ---------------------- PIPELINE SETTINGS ----------------------\n",
     "BASE_EXPERIMENT_NAME = pipeline_cfg[\"experiment\"][\"name\"]\n",
     "MODEL_ARTIFACT_PATH = pipeline_cfg[\"experiment\"][\"artifact_path\"]\n",
     "RAW_INPUT_TABLE = pipeline_cfg[\"data\"][\"input_table\"]\n",
@@ -79,9 +149,7 @@
     "LABEL_COL = pipeline_cfg[\"data\"][\"label\"]\n",
     "RUN_NAME_PREFIX = pipeline_cfg[\"experiment\"][\"run_name_prefix\"]\n",
     "\n",
-    "# 🔥 LOAD DATA\n",
-    "\n",
-    "spark = SparkSession.builder.appName(\"CreditRiskTraining\").getOrCreate()\n",
+    "# ---------------------- LOAD DATA ----------------------\n",
     "df = spark.read.table(RAW_INPUT_TABLE).toPandas()\n",
     "\n",
     "X = df[FEATURES]\n",
@@ -90,8 +158,7 @@
     "if y.dtype == \"object\":\n",
     "    y = y.map({\"yes\": 1, \"no\": 0}).astype(int)\n",
     "\n",
-    "# 🔥 PREPROCESSING\n",
-    "\n",
+    "# ---------------------- PREPROCESSING ----------------------\n",
     "categorical_cols = [c for c in X.columns if X[c].dtype == \"object\"]\n",
     "numeric_cols = [c for c in X.columns if c not in categorical_cols]\n",
     "\n",
@@ -102,8 +169,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "# 🔥 TRAIN-TEST SPLIT\n",
-    "\n",
+    "# ---------------------- TRAIN-TEST SPLIT ----------------------\n",
     "stratify_option = y if pipeline_cfg[\"data\"][\"split\"][\"stratify\"] else None\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -113,8 +179,7 @@
     "    random_state=pipeline_cfg[\"data\"][\"split\"][\"random_state\"]\n",
     ")\n",
     "\n",
-    "# 🔥 MLflow SETUP\n",
-    "\n",
+    "# ---------------------- MLFLOW SETUP ----------------------\n",
     "mlflow.set_tracking_uri(\"databricks\")\n",
     "mlflow.set_registry_uri(\"databricks-uc\")\n",
     "\n",
@@ -122,7 +187,6 @@
     "    \"random_forest\": RandomForestClassifier\n",
     "}\n",
     "\n",
-    "# ✅ MODEL TYPE TO SHORT NAME MAPPING\n",
     "MODEL_SHORT_NAMES = {\n",
     "    \"random_forest\": \"RF\"\n",
     "}\n",
@@ -133,26 +197,35 @@
     "    words = model_type.split(\"_\")\n",
     "    return \"\".join([w[0].upper() for w in words if w])\n",
     "\n",
-    "# ✅ CREATE PARAM GRID FROM YAML hyperparameters\n",
-    "\n",
+    "# ---------------------- ZIPPED PARAM GENERATOR ----------------------\n",
     "def generate_param_combinations(hyperparam_dict: dict):\n",
     "    \"\"\"\n",
-    "    Converts:\n",
-    "      {\"a\":[1,2], \"b\":[3,4]}\n",
-    "    Into:\n",
-    "      [{\"a\":1,\"b\":3}, {\"a\":1,\"b\":4}, {\"a\":2,\"b\":3}, {\"a\":2,\"b\":4}]\n",
+    "    Zipped mode:\n",
+    "    Run 1 -> first value of each list\n",
+    "    Run 2 -> second value of each list\n",
+    "    ...\n",
+    "    Total runs = minimum length of all lists\n",
     "    \"\"\"\n",
-    "    keys = list(hyperparam_dict.keys())\n",
-    "    values_list = [hyperparam_dict[k] for k in keys]\n",
+    "    if not hyperparam_dict:\n",
+    "        return []\n",
+    "\n",
+    "    for k, v in hyperparam_dict.items():\n",
+    "        if not isinstance(v, list):\n",
+    "            raise ValueError(f\"❌ Hyperparameter '{k}' must be a list. Found: {type(v)}\")\n",
+    "\n",
+    "    n_runs = min(len(v) for v in hyperparam_dict.values())\n",
     "\n",
     "    combos = []\n",
-    "    for values in product(*values_list):\n",
-    "        combos.append(dict(zip(keys, values)))\n",
+    "    for i in range(n_runs):\n",
+    "        combo = {k: hyperparam_dict[k][i] for k in hyperparam_dict.keys()}\n",
+    "        combos.append(combo)\n",
     "\n",
     "    return combos\n",
     "\n",
-    "# 🔥 TRAIN LOOP\n",
+    "# ---------------------- CREATE EVAL TABLE ONCE ----------------------\n",
+    "create_eval_table_if_not_exists()\n",
     "\n",
+    "# ---------------------- TRAIN LOOP ----------------------\n",
     "for MODEL_TYPE in MODELS_TO_TRAIN:\n",
     "\n",
     "    if MODEL_TYPE not in MODEL_CLASSES:\n",
@@ -163,7 +236,6 @@
     "        print(f\"⚠️  Skipping {MODEL_TYPE} - not in experiments_config.yml\")\n",
     "        continue\n",
     "\n",
-    "    # ✅ CREATE MODEL-SPECIFIC EXPERIMENT NAME\n",
     "    model_short = get_model_short_name(MODEL_TYPE)\n",
     "    MODEL_EXPERIMENT_NAME = f\"{BASE_EXPERIMENT_NAME}_{model_short}\"\n",
     "\n",
@@ -175,19 +247,14 @@
     "\n",
     "    ModelClass = MODEL_CLASSES[MODEL_TYPE]\n",
     "\n",
-    "    # ✅ READ hyperparameters from YAML\n",
     "    hyperparams = experiments_cfg[\"models\"][MODEL_TYPE].get(\"hyperparameters\", {})\n",
-    "\n",
     "    if not hyperparams:\n",
     "        print(f\"⚠️ No hyperparameters found for {MODEL_TYPE}. Skipping...\")\n",
     "        continue\n",
     "\n",
     "    PARAM_COMBINATIONS = generate_param_combinations(hyperparams)\n",
     "\n",
-    "    print(f\"🎯 Training {MODEL_TYPE.upper()} - {len(PARAM_COMBINATIONS)} hyperparameter combinations\\n\")\n",
-    "\n",
-    "    # ✅ Create eval table once (before runs start)\n",
-    "    create_eval_table_if_not_exists()\n",
+    "    print(f\"🎯 Training {MODEL_TYPE.upper()} - {len(PARAM_COMBINATIONS)} runs (ZIPPED MODE)\\n\")\n",
     "\n",
     "    for idx, params in enumerate(PARAM_COMBINATIONS, start=1):\n",
     "\n",
@@ -202,13 +269,16 @@
     "                (\"model\", model)\n",
     "            ])\n",
     "\n",
+    "            # ✅ TRAIN\n",
     "            start = time.time()\n",
     "            pipeline.fit(X_train, y_train)\n",
     "            train_time = round(time.time() - start, 4)\n",
     "\n",
+    "            # ✅ TRAIN METRICS\n",
     "            train_pred = pipeline.predict(X_train)\n",
     "            train_accuracy = accuracy_score(y_train, train_pred)\n",
     "\n",
+    "            # ✅ INFERENCE\n",
     "            start_inf = time.time()\n",
     "            y_pred = pipeline.predict(X_test)\n",
     "            inference_time = round(time.time() - start_inf, 4)\n",
@@ -231,14 +301,16 @@
     "            if y_proba is not None:\n",
     "                metrics[\"test_roc_auc\"] = roc_auc_score(y_test, y_proba)\n",
     "\n",
+    "            # ✅ Log metrics to MLflow\n",
     "            for k, v in metrics.items():\n",
     "                mlflow.log_metric(k, v)\n",
     "\n",
-    "            # Log params\n",
+    "            # ✅ Log params to MLflow\n",
     "            mlflow.log_params(params)\n",
     "            mlflow.log_param(\"model_type\", MODEL_TYPE)\n",
     "            mlflow.log_param(\"experiment_name\", MODEL_EXPERIMENT_NAME)\n",
     "\n",
+    "            # ✅ Log model to MLflow\n",
     "            signature = infer_signature(X_train, pipeline.predict(X_train))\n",
     "\n",
     "            mlflow.sklearn.log_model(\n",
@@ -248,7 +320,7 @@
     "                input_example=X_train.head(5)\n",
     "            )\n",
     "\n",
-    "            # ✅ NEW STEP: Log to Delta Evaluation Table\n",
+    "            # ✅ Store evaluation row in Delta table (AFTER TRAINING)\n",
     "            log_run_to_table(\n",
     "                model_name=exp_name,\n",
     "                model_type=MODEL_TYPE,\n",
@@ -258,7 +330,7 @@
     "                metrics=metrics\n",
     "            )\n",
     "\n",
-    "            print(f\"   ✅ {exp_name}\")\n",
+    "            print(f\"   ✅ {exp_name} | params={params}\")\n",
     "\n",
     "print(\"\\n\" + \"=\" * 80)\n",
     "print(\"🎉 ALL MODELS TRAINING COMPLETED!\")\n",
