--- a/Model_part_2/train.ipynb
+++ b/Model_part_2/train.ipynb
@@ -200,27 +200,34 @@
     "# ---------------------- ZIPPED PARAM GENERATOR ----------------------\n",
     "def generate_param_combinations(hyperparam_dict: dict):\n",
     "    \"\"\"\n",
-    "    Zipped mode:\n",
-    "    Run 1 -> first value of each list\n",
-    "    Run 2 -> second value of each list\n",
-    "    ...\n",
-    "    Total runs = minimum length of all lists\n",
+    "    SMART ZIPPED MODE (Dynamic):\n",
+    "    - Total runs = maximum list length among all params\n",
+    "    - If any param has only 1 value -> repeat it for all runs\n",
+    "    - If param has fewer values than max_runs -> last value repeats\n",
     "    \"\"\"\n",
+    "\n",
     "    if not hyperparam_dict:\n",
     "        return []\n",
     "\n",
+    "    # Validate: all values must be lists\n",
     "    for k, v in hyperparam_dict.items():\n",
     "        if not isinstance(v, list):\n",
     "            raise ValueError(f\"❌ Hyperparameter '{k}' must be a list. Found: {type(v)}\")\n",
+    "        if len(v) == 0:\n",
+    "            raise ValueError(f\"❌ Hyperparameter '{k}' list is empty\")\n",
     "\n",
-    "    n_runs = min(len(v) for v in hyperparam_dict.values())\n",
+    "    # Runs = max length (NOT min)\n",
+    "    max_runs = max(len(v) for v in hyperparam_dict.values())\n",
     "\n",
     "    combos = []\n",
-    "    for i in range(n_runs):\n",
-    "        combo = {k: hyperparam_dict[k][i] for k in hyperparam_dict.keys()}\n",
+    "    for i in range(max_runs):\n",
+    "        combo = {}\n",
+    "        for k, v in hyperparam_dict.items():\n",
+    "            combo[k] = v[i] if i < len(v) else v[-1]   # repeat last value\n",
     "        combos.append(combo)\n",
     "\n",
     "    return combos\n",
+    "\n",
     "\n",
     "# ---------------------- CREATE EVAL TABLE ONCE ----------------------\n",
     "create_eval_table_if_not_exists()\n",
